# Frest_django

./: .env.sample  Dockerfile  Makefile  Readme.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
Frest_django/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fixtures/: courses_fixture.json  lessons_fixture.json  payments_fixture.json  users_fixture.json
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner_payment_subscribe.py  0003_alter_course_owner_alter_lesson_owner.py  0004_alter_course_preview.py  0005_alter_lesson_preview.py  0006_course_last_update_payment_stripe_payment_link_and_more.py
nginx/: nginx.conf
scripts/: management.sh  rebuild.sh  start-dev.sh  start.sh  stop.sh
users/: admin.py  forms.py  models.py  permission.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  load_fixtures.py  load_payments.py  load_test_data.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_payment.py  0003_remove_user_first_name_remove_user_last_name.py  0004_user_first_name_user_last_name.py  0005_delete_payment.py
users/services/: stripe_service.py
