[tool.poetry]
name = "frest-django"
version = "0.1.0"
description = ""
authors = ["Kysnez4 <kysnez4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.2.1"
amqp = "==5.3.1"
asgiref = "==3.8.1"
billiard = "==4.2.1"
celery = "==5.5.3"
certifi = "==2025.7.14"
charset-normalizer = "==3.4.2"
click = "==8.2.1"
click-didyoumean = "==0.3.1"
click-plugins = "==1.1.1.2"
click-repl = "==0.3.0"
colorama = "==0.4.6"
cron-descriptor = "==1.4.5"
django = "==5.2.3"
django-celery-beat = "==2.8.1"
django-filter = "==25.1"
django-timezone-field = "==7.1"
djangorestframework = "==3.16.0"
djangorestframework-simplejwt = "==5.5.0"
drf-yasg = "==1.21.10"
idna = "==3.10"
inflection = "==0.5.1"
kombu = "==5.5.4"
packaging = "==25.0"
pillow = "==11.3.0"
prompt-toolkit = "==3.0.51"
psycopg2 = "==2.9.10"
pyjwt = "==2.9.0"
python-crontab = "==3.3.0"
python-dateutil = "==2.9.0.post0"
python-dotenv = "==1.1.1"
pytz = "==2025.2"
pyyaml = "==6.0.2"
requests = "==2.32.4"
six = "==1.17.0"
sqlparse = "==0.5.3"
stripe = "==12.3.0"
typing-extensions = "==4.14.1"
tzdata = "==2025.2"
uritemplate = "==4.2.0"
urllib3 = "==2.5.0"
vine = "==5.1.0"
wcwidth = "==0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
